# fibi-icloud-companion

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.ts
bridge/: setup.ps1
bridge/pyicloud/: auth_setup.py  bridge.py  reauth_helper.py  record_samples.py  voice_bridge.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  context.rs  events.rs  lib.rs  main.rs  paths.rs  reminders.rs
src-tauri/src/api/: anthropic.rs
src-tauri/src/icloud/: bridge.rs  caldav.rs  contacts.rs  external.rs  mod.rs  reauth.rs
src-tauri/src/mail/: client.rs  mod.rs  smtp.rs
src-tauri/src/platform/: autostart.rs  cpu.rs  mod.rs  win.rs
src-tauri/src/storage/: db.rs  history.rs  mod.rs  secrets.rs
src-tauri/src/voice/: bridge.rs  controller.rs  mic.rs  mod.rs  recorder.rs  whisper.rs
src-tauri/src/windows/: cat.rs  mod.rs  tray.rs
src-tauri/tests/: voice_smoke.rs
src/cat/: cat.css  cat.ts  index.html
src/settings/: index.html  settings.css  settings.ts
src/shared/: ipc.ts
